src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_two_parameters_called_in_program.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%foo = type { i32, i8 }
%prg = type {}

@foo_instance = global %foo zeroinitializer
@prg_instance = global %prg zeroinitializer

define void @foo(%foo* %0) {
entry:
  %bar = getelementptr inbounds %foo, %foo* %0, i32 0, i32 0
  %buz = getelementptr inbounds %foo, %foo* %0, i32 0, i32 1
  ret void
}

define void @prg(%prg* %0) {
entry:
  store i32 2, i32* getelementptr inbounds (%foo, %foo* @foo_instance, i32 0, i32 0), align [filtered]
  store i8 1, i8* getelementptr inbounds (%foo, %foo* @foo_instance, i32 0, i32 1), align [filtered]
  call void @foo(%foo* @foo_instance)
  ret void
}
