src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_var_temp_before_var_generates_correct_struct_layout.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: res
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32, i32 }

@prg_instance = global %prg zeroinitializer

define void @prg(ptr %0) {
entry:
  %t1 = alloca i32, align [filtered]
  %t2 = alloca i32, align [filtered]
  %t3 = alloca i32, align [filtered]
  %v1 = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  %v2 = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 1
  store i32 0, ptr %t1, align [filtered]
  store i32 0, ptr %t2, align [filtered]
  store i32 0, ptr %t3, align [filtered]
  %load_t1 = load i32, ptr %t1, align [filtered]
  %load_t2 = load i32, ptr %t2, align [filtered]
  %tmpVar = add i32 %load_t1, %load_t2
  store i32 %tmpVar, ptr %v1, align [filtered]
  %load_t3 = load i32, ptr %t3, align [filtered]
  store i32 %load_t3, ptr %v2, align [filtered]
  ret void
}
