src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_var_temp_external_member_access_uses_correct_gep_index.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: res
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%mainProg = type { i32, i32 }

@mainProg_instance = global %mainProg zeroinitializer

define void @mainProg(ptr %0) {
entry:
  %temp1 = alloca i32, align [filtered]
  %temp2 = alloca i32, align [filtered]
  %a = getelementptr inbounds nuw %mainProg, ptr %0, i32 0, i32 0
  %b = getelementptr inbounds nuw %mainProg, ptr %0, i32 0, i32 1
  store i32 0, ptr %temp1, align [filtered]
  store i32 0, ptr %temp2, align [filtered]
  store i32 10, ptr %a, align [filtered]
  store i32 20, ptr %b, align [filtered]
  ret void
}

define i32 @main() {
entry:
  %main = alloca i32, align [filtered]
  %x = alloca i32, align [filtered]
  %y = alloca i32, align [filtered]
  store i32 0, ptr %x, align [filtered]
  store i32 0, ptr %y, align [filtered]
  store i32 0, ptr %main, align [filtered]
  call void @mainProg(ptr @mainProg_instance)
  %load_a = load i32, ptr @mainProg_instance, align [filtered]
  store i32 %load_a, ptr %x, align [filtered]
  %load_b = load i32, ptr getelementptr inbounds nuw (%mainProg, ptr @mainProg_instance, i32 0, i32 1), align [filtered]
  store i32 %load_b, ptr %y, align [filtered]
  %main_ret = load i32, ptr %main, align [filtered]
  ret i32 %main_ret
}
